[CDAP-13242] Admin page improvements - Rewrites SortableStickyGrid to use current css grid - Modifies NamespacesAccordion and SystemPrefsAccordion to use SortableStickyGrid, to make the headers sortable - Highlights newly added namespaces and system prefs - Changes Admin Configuration tab to be a separate route, opens ns accordion by default, and opens profiles accordion when going back from profiles create view - Left align the subheaders in the profiles table - Uses Switch and Route instead of using this.state.currentTab to render, and extracts AdminTabSwitch component - Explicit pass namespace to ProfilesListView, as sometimes getCurrentNamespace() is not defined yet when defaultProps is resolved

--- a/cdap-ui/app/cdap/components/Administration/AdminConfigTabContent/AdminConfigTabContent.scss
+++ b/cdap-ui/app/cdap/components/Administration/AdminConfigTabContent/AdminConfigTabContent.scss
@@ -80,10 +80,6 @@ $hover-active-color: $grey-08;
           .grid-header {
             background-color: $hover-active-color;
           }
-
-          .grid-row:hover {
-            background-color: $hover-active-color;
-          }
         }
       }
     }
