--- a/cdap-ui/app/cdap/components/Cloud/Profiles/ListView/ListView.scss
+++ b/cdap-ui/app/cdap/components/Cloud/Profiles/ListView/ListView.scss
@@ -56,7 +56,7 @@ $row-height: 50px;
         > div {
           padding: 0 5px 0 0;
           margin-right: 20px;
-          margin-left: 5px;
+          margin-left: 10px;
           border: 0;
         }
       }
